--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-  <script type="text/babel">
+  <script type="text/babel" data-presets="react">
     const { useMemo, useState } = React;
 
     const ACTIONS = [
